deploy/aks/monitoring/perf/prometheus-pushgateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-pushgateway-ingress
  namespace: dapr-perf-metrics
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required to push metrics to prometheus-pushgateway'
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    #TODO - replace hello-world-ingress.MY_CUSTOM_DOMAIN with your custom domain
    - hello-world-ingress.MY_CUSTOM_DOMAIN
    secretName: tls-secret
  rules:
  #TODO - replace hello-world-ingress.MY_CUSTOM_DOMAIN with your custom domain
  - host: hello-world-ingress.MY_CUSTOM_DOMAIN
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prometheus-pushgateway
            port:
              number: 9091
